--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -1,4 +1,4 @@
-import { Tabs, Tab } from 'nextra-theme-docs'
+import { Callout, Tabs, Tab } from 'nextra-theme-docs'
 
 # SDK Library
 ## Outline
@@ -28,6 +28,12 @@ Then, `@nestia/sdk` will analyze your NestJS backend server code, and generate S
 If you can't imagine how the SDK library works, then look at the gif image of below. Left side is the NestJS backend server program, and right side is the Frontend program interacting with your server. As you can see, frontend developer is utilizing auto completion through SDK library. 
 
 Isn't it look like much more convenient and safer than before when using [Swagger Documents](swagger)?
+
+<Callout type="warning">
+`@nestia/sdk` also can build [Swagger Documents](./swagger).
+
+Furthermore, `@nestia/sdk` is even much easier and powerful than `@nestjs/swagger`.
+</Callout>
 
 ![SDK](https://user-images.githubusercontent.com/13158709/215004990-368c589d-7101-404e-b81b-fbc936382f05.gif)
 
