--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -5,6 +5,8 @@ import Stack from '@mui/material/Stack';
 
 ## Outline
 
+![Nestia Logo](/logo.jpg)
+
 <span style={{ display: "flex", flexDirection: "row" }}>
 {[
     [
@@ -43,7 +45,6 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
 
   - `@nestia/core`: super-fast decorator
   - `@nestia/sdk`: evolved SDK and Swagger generator
-  - `@nestia/migrate`: Convert `swagger.json` to NestJS project
   - `nestia`: just CLI (command line interface) tool
 
 <br/>
@@ -58,7 +59,7 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
         JSON serialization is **200x faster** than `class-transformer`
     </Alert>
     <Alert severity="error">
-        SDK is almost same with [tRPC](https://trpc.io), but much advanced
+        SDK is similar with [tRPC](https://trpc.io), but much advanced
     </Alert>
 </Stack>
 
