--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -3,7 +3,7 @@ import Stack from '@mui/material/Stack';
 
 ## Outline
 
-![Nestia Logo](/logo.jpg)
+![Nestia Logo](/logo.png)
 
 <span style={{ display: "flex", flexDirection: "row" }}>
 {[
