--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -5,7 +5,7 @@ import Stack from '@mui/material/Stack';
 
 ## Outline
 
-![Nestia Logo](/logo.jpg)
+![Nestia Logo](/logo.png)
 
 <span style={{ display: "flex", flexDirection: "row" }}>
 {[
