--- a/website/pages/docs/core/TypedQuery.mdx
+++ b/website/pages/docs/core/TypedQuery.mdx
@@ -472,9 +472,9 @@ export const checkCommentTag = (input) => {
 ## Restriction
 When using `@TypedQuery()`, you've to follow such restrction.
 
-At first, type of `@TypedQuery()` must be an **object type**. It does not allow union type. Also, nullable and undefindable types are not allowed, either. Note that, query parmaeter type must be a sole **object type** without any extra definition.
+At first, type of `@TypedQuery()` must be a pure **object type**. It does not allow union type. Also, nullable and undefindable types are not allowed, either. Note that, query parameter type must be a sole **object type** without any extra definition.
 
-At next, type of properties must be **atomic** type. The property type does not allow union type and nullable type either. However, undefindable type is possible. And if the union type is used only for literal values about same union type, it is possible
+At next, type of properties must be **atomic**, or array of atomic type. In the atomic type case, the atomic type allows both nullable and undefindable types. However, mixed union atomic type like `string | number` or `"1" | "2" | 3` are not allowed. Also, the array type does not allow both nullable and undefindable types, either.
 
   - `boolean`
   - `number`
@@ -484,22 +484,37 @@ At next, type of properties must be **atomic** type. The property type does not 
 ```typescript
 export interface SomeQueryDto {
     //----
-    // atomic types are fully allowed
+    // ATOMIC TYPES
     //----
+    // ALLOWED
     boolean: boolean;
     number: number;
     string: string;
     bigint: bigint;
-    
-    //----
-    // SPECIAL CASES
-    //----
-    /// undefindable is allowed, 
-    /// but nullable is not
-    number?: number; 
+    optional_number?: number;
+    nullable_string: string | null;
+    literal_union: "A" | "B" | "C" | "D";
 
-    /// union type is allowed only when 
-    /// literal values about same atomic type
-    type: "page" | "list"; 
+    // NOT ALLOWED
+    mixed_union: string | number | boolean;
+    mixed_literal: "A" | "B" | 3;
+
+    //----
+    // ARRAY TYPES
+    //----
+    // ALLOWED
+    nullable_element_array: (string | null)[];
+    string_array: string[];
+    number_array: number[];
+    literal_union_array: ("A" | "B" | "C")[];
+    literal_tuple: ["A", "B", "C"];
+
+    // NOT ALLOWED
+    optional_element_array: (string | undefined)[];
+    optional_array: string[] | undefined;
+    nullable_array: string[] | null;
+    union_atomic_array: (string | number)[];
+    mixed_literal_array: ("A", "B", 3)[];
+    mixed_tuple: ["A", "B", 3];
 }
 ```
